--- a/style.css
+++ b/style.css
@@ -11,12 +11,24 @@ body {
 
 header {
     margin: 1em;
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
 }
 
-/* img {
-  float: left;
+header > img {
   max-width: 150px;
-} */
+}
+
+header > h1 {
+    margin-left: 2em;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 2.5em;
+    color: #fff;
+    text-align: center;
+}
 
 main {
     display: grid;
@@ -33,13 +45,7 @@ section {
     min-height: 88vh;
 }
 
-h1 {
-    margin-left: 2em;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 2.5em;
-    color: #fff;
-    float: right;
-}
+
 
 .instructions {
     background-color: #fff;
