--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ body {
 header {
     margin: 1em;
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-columns: 1fr 5fr 2fr;
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
 
-header > img {
+#logo {
   max-width: 150px;
 }
 
@@ -28,6 +28,11 @@ header > h1 {
     font-size: 2.5em;
     color: #fff;
     text-align: center;
+}
+
+header > h2 {
+  text-align: center;
+  font-family: 'Titillium Web', sans-serif;
 }
 
 main {
