--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 header {
     margin: 1em;
     display: grid;
-    grid-template-columns: 1fr 5fr 2fr;
+    grid-template-columns: 1fr 5fr 1fr;
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
@@ -30,9 +30,14 @@ header > h1 {
     text-align: center;
 }
 
-header > h2 {
-  text-align: center;
+header > a {
+  
+  margin-top: 3em;
+/*   margin-right: -2em; */
+/*   text-align: center; */
   font-family: 'Titillium Web', sans-serif;
+  color: #fff;
+
 }
 
 main {
